--- a/css/index.css
+++ b/css/index.css
@@ -8,17 +8,18 @@ html, body{
 
 nav{
     top: 0;
-    left: 0;
+    left: -10vw;
     width: 10vw;
     z-index: 6;
     height: 100vh;
-    color: white;
+    color: #ffffff;
     position: sticky;
-    background-color: black;
+    background-color: #000000;
 }
 
 .burger{
-    width: 100%;
+    width: 10vw;
+    position: absolute;
     height: 10%;
     display: flex;
     align-items: center;
@@ -30,7 +31,7 @@ nav{
   width: 35px;
   height: 4px;
   margin: 5px 0;
-  background-color: white;
+  background-color: #000000;
 }
 
 .link-bar {
@@ -55,7 +56,7 @@ nav{
 .link-bar a {
     width: 100%;
     height: 100%;
-    color: white;
+    color: #ffffff;
     display: block;
     text-decoration: none;
 }
@@ -84,7 +85,7 @@ nav{
 .social-bloc a {
     width: 100%;
     height: 100%;
-    color: white;
+    color: #ffffff;
     display: block;
     text-decoration: none;
 }
