--- a/css/index.css
+++ b/css/index.css
@@ -8,8 +8,8 @@ html, body{
 
 nav{
     top: 0;
-    left: -10vw;
-    width: 10vw;
+    left: -15vw;
+    width: 8vw;
     z-index: 6;
     height: 100vh;
     color: #ffffff;
@@ -18,8 +18,9 @@ nav{
 }
 
 .burger{
-    width: 10vw;
+    width: 8vw;
     position: absolute;
+    z-index: 7;
     height: 10%;
     display: flex;
     align-items: center;
