section modification with responsive no content

--- a/css/index.css
+++ b/css/index.css
@@ -1,33 +1,31 @@
-html, body{
-    margin: 0;
-    padding: 0;
-    width: 100vw;
-    height: 100vh;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-}
-
 header, section {
-    width: 100vw;
+    margin-left: 12vw;
     height: 100vh;
+    position: relative;
 }
 
-#about, #projets {
-    background-color: #192734;
-}
-
-nav{
-    top: 0;
-    left: 0;
-    width: 8vw;
-    z-index: 6;
-    height: 100vh;
+.scroll-top{
+    width: 30px;
+    height: 30px;
     color: #ffffff;
-    position: absolute;
-    background-color: #000000;
+    position: fixed;
+    z-index: 6;
+    right: 20px;
+    bottom: 50px;
+    display: flex;
+    transform: rotate(-90deg);
+    justify-content: center;
+    align-items: center;
+}
+
+.scroll-top img{
+    width: 100%;
+    transform: rotate(90deg);
+    display: block;
 }
 
 .burger{
-    width: 8vw;
+    width: 10vw;
     z-index: 7;
     height: 10%;
     display: none;
@@ -41,7 +39,19 @@ nav{
   width: 35px;
   height: 4px;
   margin: 5px 0;
+  border-radius: 20px;
   background-color: #000000;
+}
+
+nav{
+    top: 0;
+    left: 0;
+    width: 12vw;
+    z-index: 6;
+    height: 100vh;
+    color: #ffffff;
+    position: fixed;
+    background-color: #000000;
 }
 
 .link-bar {
@@ -98,4 +108,93 @@ nav{
     display: block;
     color: #ffffff;
     text-decoration: none;
+}
+
+#header, #parcour, #contact {
+    background-color: #192734;
+    color: #ffffff
+}
+
+.central-part{
+    padding: 40px 60px;
+}
+
+.vertical-name{
+    transform: rotate(-90deg);
+    position: absolute;
+    top: 50vh;
+    left: -30px;
+    margin: 0;
+}
+
+footer{
+    margin-left: 8vw;
+    height: 50vh;
+    background-color: #26282b;
+}
+
+
+@media screen and (min-width: 1440px) and (max-width: 1919px) {
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1439px) {
+    nav{
+        width: 15vw;
+    }
+    header, section {
+        margin-left: 15vw;
+    }
+    .vertical-name{
+        left: -50px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    nav{
+        width: 20vw;
+    }
+    header, section {
+        margin-left: 20vw;
+    }
+    .vertical-name{
+        left: -45px;
+    }
+}
+
+@media screen and (min-width: 425px) and (max-width: 767px) {
+    nav{
+        left: -40vw;
+        width: 40vw;
+    }
+    .burger{
+        margin: 0 10px;
+        display: flex;
+    }
+    header, section, footer {
+        margin-left: 0;
+    }
+    .vertical-name{
+        transform: unset;
+        top: unset;
+        left: 20px;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 424px) {
+    nav{
+        left: -70vw;
+        width: 60vw;
+    }
+    .burger{
+        margin: 0 10px;
+        display: flex;
+    }
+    header, section, footer {
+        margin-left: 0;
+    }
+    .vertical-name{
+        transform: unset;
+        top: unset;
+        left: 15px;
+    }
 }
