--- a/css/index.css
+++ b/css/index.css
@@ -134,6 +134,7 @@ footer{
     position: relative;
     background-color: #26282b;
     display: flex;
+    flex-direction: row;
 }
 .map-container{
     width: 60%;
@@ -143,7 +144,22 @@ footer{
     width: auto;
     height: 90%;
 }
-
+.links-container ul {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    display: flex;
+    list-style-type: none;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.links-container a {
+    width: 100%;
+    height: 100%;
+    display: block;
+    color: #ffffff;
+    text-decoration: none;
+}
 
 @media screen and (min-width: 1440px) and (max-width: 1919px) {
 }
