--- a/css/index.css
+++ b/css/index.css
@@ -140,23 +140,41 @@ nav{
     justify-content: space-around;
 }
 
+#copy-btn {
+    background-color: #e7e7e7;
+    color: black;
+    border: none;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
 .contact-cards{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
 
+.contact-cards div {
+    margin: 0 20px 0 20px;
+}
+
 .contact-cards a {
     display: block;
 }
+
 .contact-cards video, .contact-cards img{
     display: block;
     width: 200px;
     height: 100%;
 }
+
 .contact-cards a:hover{
     transform: scale(1.2);
 }
+
 footer{
     margin-left: 12vw;
     height: 50vh;
