--- a/css/index.css
+++ b/css/index.css
@@ -140,7 +140,7 @@ nav{
     justify-content: space-around;
 }
 
-#copy-btn {
+div #copy-btn {
     background-color: #e7e7e7;
     color: black;
     border: none;
