--- a/css/index.css
+++ b/css/index.css
@@ -144,7 +144,9 @@ div #copy-btn {
     background-color: #e7e7e7;
     color: black;
     border: none;
-    padding: 15px 32px;
+    height: 20px;
+    width: 40px;
+    padding: 5px 10px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
