--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,8 @@
+body,html{
+    padding: 0;
+    margin: 0;
+    scroll-behavior: smooth;
+}
 header, section {
     margin-left: 12vw;
     height: 100vh;
@@ -142,7 +147,9 @@ nav{
 
 .contact-info a, .contact-cards a{
     display: block;
+    color: white;
     text-decoration: none;
+    text-decoration-color: white;
 }
 
 div #copy-btn {
