--- a/css/index.css
+++ b/css/index.css
@@ -228,6 +228,12 @@ footer{
     .vertical-name{
         left: -50px;
     }
+    .contact-container{
+        flex-direction: column;
+    }
+    .contact-cards{
+        flex-wrap: wrap;
+    }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
@@ -239,6 +245,12 @@ footer{
     }
     .vertical-name{
         left: -45px;
+    }
+    .contact-container{
+        flex-direction: column;
+    }
+    .contact-cards{
+        flex-wrap: wrap;
     }
 }
 
