--- a/css/index.css
+++ b/css/index.css
@@ -287,6 +287,13 @@ footer{
     .contact-cards div{
         margin: 20px 0;
     }
+    footer{
+        flex-direction:column
+    }
+    .map-container{
+        width:100%;
+        height:100%;
+    }
 }
 
 @media screen and (min-width: 320px) and (max-width: 424px) {
@@ -317,5 +324,12 @@ footer{
     }
     .contact-cards div{
         margin: 20px 0;
+    }
+    footer{
+        flex-direction:column
+    }
+    .map-container{
+        width:100%;
+        height:100%;
     }
 }
